log/build_2021-05-31_13-24-35/gazebo_plugin_sim/stdout_stderr.log
[35m[1mScanning dependencies of target platform_plugin_test[0m
[ 50%] [32mBuilding CXX object CMakeFiles/platform_plugin_test.dir/src/platform_plugin_test.cpp.o[0m
/home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp:34:46: error: ‘vector3’ is not a member of ‘geometry_msgs::msg’; did you mean ‘Vector3’?
   34 |     rclcpp::Subscription<geometry_msgs::msg::vector3>::SharedPtr vel_M1_;
      |                                              ^~~~~~~
      |                                              Vector3
/home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp:34:53: error: template argument 1 is invalid
   34 |     rclcpp::Subscription<geometry_msgs::msg::vector3>::SharedPtr vel_M1_;
      |                                                     ^
/home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp:34:53: error: template argument 3 is invalid
/home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp:34:56: error: expected ‘;’ at end of member declaration
   34 |     rclcpp::Subscription<geometry_msgs::msg::vector3>::SharedPtr vel_M1_;
      |                                                        ^~~~~~~~~
      |                                                                 ;
/home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp:34:66: error: ‘vel_M1_’ does not name a type
   34 |     rclcpp::Subscription<geometry_msgs::msg::vector3>::SharedPtr vel_M1_;
      |                                                                  ^~~~~~~
/home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp: In member function ‘virtual void gazebo_plugin_sim::PlatformPluginTest::Load(gazebo::physics::ModelPtr, sdf::v9::ElementPtr)’:
/home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp:73:12: error: ‘class gazebo_plugin_sim::PlatformPluginTestPrivate’ has no member named ‘vel_M1_’
   73 |     impl_->vel_M1_=impl_->ros_node_->create_subscription<geometry_msgs::msg::vector3>(
      |            ^~~~~~~
/home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp:73:78: error: ‘vector3’ is not a member of ‘geometry_msgs::msg’; did you mean ‘Vector3’?
   73 |     impl_->vel_M1_=impl_->ros_node_->create_subscription<geometry_msgs::msg::vector3>(
      |                                                                              ^~~~~~~
      |                                                                              Vector3
/home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp:75:91: error: no matching function for call to ‘gazebo_ros::Node::create_subscription<<expression error> >(std::string&, rclcpp::QoS, std::_Bind_helper<false, void (gazebo_plugin_sim::PlatformPluginTestPrivate::*)(double), gazebo_plugin_sim::PlatformPluginTestPrivate*, const std::_Placeholder<1>&>::type)’
   75 |      std::bind(&PlatformPluginTestPrivate::OnMsgVelM1, impl_.get(), std::placeholders::_1));
      |                                                                                           ^
In file included from /opt/ros/foxy/include/rclcpp/executors/single_threaded_executor.hpp:28,
                 from /opt/ros/foxy/include/rclcpp/executors.hpp:22,
                 from /opt/ros/foxy/include/rclcpp/rclcpp.hpp:146,
                 from /opt/ros/foxy/include/gazebo_ros/node.hpp:18,
                 from /home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp:9:
/opt/ros/foxy/include/rclcpp/node.hpp:213:3: note: candidate: ‘template<class MessageT, class CallbackT, class AllocatorT, class CallbackMessageT, class SubscriptionT, class MessageMemoryStrategyT> std::shared_ptr<SubscriptionT> rclcpp::Node::create_subscription(const string&, const rclcpp::QoS&, CallbackT&&, const rclcpp::SubscriptionOptionsWithAllocator<AllocatorT>&, typename MessageMemoryStrategyT::SharedPtr)’
  213 |   create_subscription(
      |   ^~~~~~~~~~~~~~~~~~~
/opt/ros/foxy/include/rclcpp/node.hpp:213:3: note:   template argument deduction/substitution failed:
/home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp:75:91: error: template argument 1 is invalid
   75 |      std::bind(&PlatformPluginTestPrivate::OnMsgVelM1, impl_.get(), std::placeholders::_1));
      |                                                                                           ^
At global scope:
cc1plus: warning: unrecognized command line option ‘-Wno-inconsistent-missing-override’
make[2]: *** [CMakeFiles/platform_plugin_test.dir/build.make:63: CMakeFiles/platform_plugin_test.dir/src/platform_plugin_test.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:78: CMakeFiles/platform_plugin_test.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
